<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:hint="@string/name"
        android:inputType="textCapWords" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_last_name"
        android:hint="@string/last_name"
        android:inputType="textCapWords" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_birth"
        android:hint="@string/birth_date"
        android:maxLines="1"
        android:maxEms="4"
        android:inputType="number" />
</LinearLayout>