<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_activity_diver_actions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.panteleevm.diveacademy.discountcards.ActivityDiverActions"
    tools:showIn="@layout/app_bar_activity_diver_actions">

    <TextView
        android:id="@+id/tv_person_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/person_data" />

    <TextView
        android:id="@+id/label_card_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_person_data"
        android:text="@string/card_serial" />

    <TextView
        android:id="@+id/tv_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_person_data"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/label_card_serial"
        android:layout_toRightOf="@+id/label_card_serial" />

    <TextView
        android:id="@+id/tv_card_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_person_data"
        android:layout_toEndOf="@+id/tv_prefix"
        android:layout_toRightOf="@+id/tv_prefix"
        android:text="@string/serial" />

    <TextView
        android:id="@+id/label_discount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_card_serial"
        android:text="@string/discount_value" />

    <TextView
        android:id="@+id/tv_discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_card_serial"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/label_discount_value"
        android:layout_toRightOf="@+id/label_discount_value"
        android:text="@string/value" />

    <TextView
        android:id="@+id/label_grand_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_discount_value"
        android:text="@string/grand_total" />

    <TextView
        android:id="@+id/tv_grand_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_grand_total"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/label_grand_total"
        android:layout_toRightOf="@+id/label_grand_total"
        android:text="@string/sum" />

    <TextView
        android:id="@+id/label_purchase_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_grand_total"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/purchase_list" />

    <ListView
        android:id="@+id/lv_purchase_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_purchase_list"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false" />

</RelativeLayout>
